# x-monitor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  HOWTO.md  LICENSE  Makefile  NOTIFICATION_FIX_SUMMARY.md  OVERVIEW.md  PROJECT.md  QUICKSTART.md  README.md  STATUS.md  UI_DESIGN.md  UI_IMPROVEMENTS.md  USAGE_GUIDE.md  config.toml  demo.py  demo.sh  main.py  pyproject.toml  pytest.ini  run.sh  test_notification_fix.py
manual_checks/: notification_check.py
src/: __init__.py  config.py  fetcher.py  instance_manager.py  logging_utils.py  main.py  monitor.py  notifier.py  startup_tracker.py  state_manager.py  subscription_actions.py  time_utils.py  types.py  ui.py  ui_add_user.py  ui_columns.py  ui_controls.py  ui_keybindings.py  ui_layout.py  ui_runtime.py  ui_search.py  ui_status.py  ui_textual_backup.py
tests/: conftest.py  test_config.py  test_fetcher.py  test_logging_utils.py  test_main.py  test_monitor.py  test_state_manager.py  test_subscription_actions.py  test_three_column_ui.py  test_time_utils.py  test_types.py  test_ui.py  test_ui_runtime.py  test_ui_search.py
