[project]
name = "x-monitor"
version = "0.2.2"
description = "X (Twitter) User Monitoring CLI Dashboard"
authors = [{name = "AI Agent"}]
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit>=3.0.43",
    "feedparser>=6.0.10",
    "httpx>=0.27.0",
    "toml>=0.10.2",
    "wcwidth>=0.2.5",
]

[project.scripts]
x-monitor = "x_monitor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
